--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,9 +14,15 @@ pipeline{
       stage('Build') {
         steps {
           sh 'npm install'
+        }
+      }  
+      stage('Building Image') {
+        steps {
+          script {
+            dockerImage = docker.build registry + ":$BUILD_NUMBER"
+          }
+        }  
       }
-    }  
-    
       stage('Test') {
         steps {
           sh 'npm test'
