--- a/JenkinsFile
+++ b/JenkinsFile
@@ -43,27 +43,22 @@ stage(‘package’)
   when {
     branch 'prod'
   }
-    stages{
-      stage('building docker image')
-      {
-        steps
-        {
-          sh 'docker build -t jasmine992/final-capstone:${GIT_COMMIT} . '
-        }
+     stage('Building our image') { 
+                steps { 
+                    script { 
+                        dockerImage = docker.build registry + ":$GIT_COMMIT-$BUILD_NUMBER"
+                    }
+                } 
+            }
+            stage('Deploy our image') { 
+                steps { 
+                    script { 
+                        docker.withRegistry( '', registryCredential ) { 
+                            dockerImage.push() 
+                        }
+                    } 
+                }
+            }
       }
-      stage('pushing docker image')
-      {
-        steps{
-          sh '''
-          echo $dockerhub_PSW | docker login -u $dockerhub_USR --password-stdin
-          docker push jasmine992/final-capstone:${GIT_COMMIT} 
-          docker logout
-          '''
-
-        }
-      }
-    }
 }
-
-}
-}
+        
