--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,7 +6,7 @@ pipeline{
         dockerImage = '' 
     }    
     tools { 
-        maven 'maven3'
+        nodejs 'node'
     }
     stages
        {
@@ -28,20 +28,4 @@ pipeline{
               }
             }
         }
-        stage('Building our image') { 
-                steps { 
-                    script { 
-                        dockerImage = docker.build registry + ":$GIT_COMMIT-$BUILD_NUMBER"
-                    }
-                } 
-            }
-         stage('Deploy our image') { 
-                steps { 
-                    script { 
-                        docker.withRegistry( '', registryCredential ) { 
-                            dockerImage.push() 
-                        }
-                    } 
-                }
-            }
-          }
+        
